--- a/app/javascript/image-gallery-frontend/src/components/Gallery.css
+++ b/app/javascript/image-gallery-frontend/src/components/Gallery.css
@@ -3,7 +3,6 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 20%;
     height: 20%;
   }
 
@@ -14,6 +13,7 @@
     max-height: 80%;
     overflow: auto;
     z-index: 2;
+    background-color: #8c8c41;
   }
 
   .modal img {
